# inc_for_kaos

./: README  index.html  run_compiler.sh
Include/: Inc.hs  compile.sh  pre.cabal  q.hs  test.k  test1.txt  tmp
